# Automated-Web-Penetration-Testing-Platform

Automated-Web-Penetration-Testing-Platform/: .env.example  .gitignore  Makefile  README.md  index.html  package-lock.json  package.json
Automated-Web-Penetration-Testing-Platform/apps/backend/: Dockerfile  pyproject.toml  sentinel.db
Automated-Web-Penetration-Testing-Platform/apps/backend/app/: config.py  database.py  main.py
Automated-Web-Penetration-Testing-Platform/apps/backend/app/api/: deps.py
Automated-Web-Penetration-Testing-Platform/apps/backend/app/api/middleware/: rate_limiter.py
Automated-Web-Penetration-Testing-Platform/apps/backend/app/api/routes/: auth.py  recon.py  reports.py  scans.py  targets.py
Automated-Web-Penetration-Testing-Platform/apps/backend/app/models/: __init__.py  recon_result.py  report.py  rl_feedback.py  scan.py  user.py  verified_target.py  vulnerability.py
Automated-Web-Penetration-Testing-Platform/apps/backend/app/schemas/: recon.py  report.py  scan.py  target.py  user.py  vulnerability.py
Automated-Web-Penetration-Testing-Platform/apps/backend/app/services/: msf_client.py  pipeline_runner.py  scan_runner.py  scheduler.py  security.py  target_verification.py  url_validator.py
Automated-Web-Penetration-Testing-Platform/apps/backend/app/websocket/: scan_progress.py
Automated-Web-Penetration-Testing-Platform/apps/frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
Automated-Web-Penetration-Testing-Platform/infra/: docker-compose.dev.yml  docker-compose.yml
Automated-Web-Penetration-Testing-Platform/infra/nginx/: sentinel.conf
Automated-Web-Penetration-Testing-Platform/infra/scripts/: init-db.sql  seed-owasp.sql
Automated-Web-Penetration-Testing-Platform/public/: gemini-code-1781859957643.md
Automated-Web-Penetration-Testing-Platform/scripts/: kali_setup.sh
Automated-Web-Penetration-Testing-Platform/workers/: Dockerfile.worker  celery_app.py  publisher.py
Automated-Web-Penetration-Testing-Platform/workers/tasks/: ai_analysis_task.py  report_task.py  scan_task.py
(+13 files in other folders)
