[project]
name = "sentinel-backend"
version = "0.1.0"
description = "Sentinel pentest suite — FastAPI backend (intern build)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "aiosqlite>=0.20.0",
  "asyncpg>=0.30.0",
  "alembic>=1.13.3",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.0",
  "email-validator>=2.2.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt<5.0,>=4.0",
  "python-multipart>=0.0.12",
  "apscheduler>=3.10.4",
  "dnspython>=2.7.0",
  "aiohttp>=3.10.10",
  "httpx>=0.27.2",
  "beautifulsoup4>=4.12.3",
  "jinja2>=3.1.4",
  "weasyprint>=62.3",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
